lightbulb-jp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "lightbulb-jp-service"
  namespace: "lightbulb-jp-ns"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "lightbulb-jp"
