lightbulb-jp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "lightbulb-jp-ingress"
  namespace: "lightbulb-jp-ns"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: lightbulb-jp
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "service-2048"
              servicePort: 80
